--- a/frontend/src/components/RentMap/style.less
+++ b/frontend/src/components/RentMap/style.less
@@ -1,4 +1,51 @@
 .rent-map {
     width: 100vw;
     height: 100vh;
+
+    .rent-map-infoWindow {
+        // width: 350px;
+        // height: 125px;
+        display: flex;
+
+        img {
+            width: 120px;
+            height: 91px;
+            margin-right: 6px;
+        }
+
+        .info {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            color: #666;
+            font-size: 14px;
+
+            .title {
+                color: #333;
+                width: 300px;
+                max-height: 42px;
+                font-size: 14px;
+                font-weight: bold;
+                line-height: 22px;
+                margin-bottom: 2px;
+                overflow: hidden;
+            }
+
+            .price {
+                color: #e54b00;
+                font-size: 19px;
+                font-weight: bold;
+                position: absolute;
+                border-width: 0;
+                bottom: 12px;
+                right: 16px;
+            }
+        }
+    }
+}
+
+.ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
